--- a/Field Book/res/layout/list.xml
+++ b/Field Book/res/layout/list.xml
@@ -3,13 +3,13 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="#FFFFFF"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <ListView
         android:id="@+id/myList"
-        android:choiceMode="singleChoice"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:choiceMode="singleChoice" />
 
 </LinearLayout>
