--- a/Field Book/res/layout/tutorial.xml
+++ b/Field Book/res/layout/tutorial.xml
@@ -1,69 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout 
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/layout_border"  
-    android:padding="5dp"  
-    android:orientation="vertical" >
+    android:background="@drawable/layout_border"
+    android:orientation="vertical"
+    android:padding="5dp">
 
 
-	<TextView 
-	    android:id="@+id/header"
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
-		android:gravity="center"
-		android:textColor="#000000"
-		android:minWidth="130dp"
-		android:textStyle="bold"
+    <TextView
+        android:id="@+id/header"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="6dip"
-		android:textAppearance="?android:attr/textAppearanceMedium"
-	/>
-    
-	<TextView 
-	    android:id="@+id/text2"
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
-		android:textColor="#000000"
-		android:text=""
-		android:minWidth="130dp"
-		android:layout_below="@+id/header"
+        android:gravity="center"
+        android:minWidth="130dp"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#000000"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/text2"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/header"
         android:layout_marginLeft="6dip"
-		android:textAppearance="?android:attr/textAppearanceMedium"
-	/>
-    
+        android:minWidth="130dp"
+        android:text=""
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#000000" />
+
     <Button
         android:id="@+id/prev"
         android:layout_width="130dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/text2"
         android:layout_alignParentLeft="true"
+        android:layout_below="@+id/text2"
+        android:background="@android:drawable/btn_default"
         android:text="@string/prev"
-        android:textSize="16dp"
-        android:textStyle="bold"
         android:textColor="#000000"
-	/>
-    <Button
+        android:textSize="16dp"
+        android:textStyle="bold" />
+
+    <Button
         android:id="@+id/close"
         android:layout_width="130dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/text2"
         android:layout_centerHorizontal="true"
+        android:background="@android:drawable/btn_default"
         android:text="@string/close"
-        android:textSize="16dp"
-        android:textStyle="bold"
         android:textColor="#000000"
-	/>
-    
+        android:textSize="16dp"
+        android:textStyle="bold" />
+
     <Button
         android:id="@+id/next"
         android:layout_width="130dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/text2"
         android:layout_alignParentRight="true"
+        android:layout_below="@+id/text2"
+        android:background="@android:drawable/btn_default"
         android:text="@string/next"
         android:textColor="#000000"
         android:textSize="16dp"
         android:textStyle="bold" />
-    
+
 </RelativeLayout>
