--- a/Field Book/res/layout/changelog.xml
+++ b/Field Book/res/layout/changelog.xml
@@ -21,9 +21,10 @@
     <Button
         android:id="@+id/closeBtn"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_gravity="center_horizontal"
-        android:minWidth="100dp"
+        android:background="@android:drawable/btn_default"
+        android:minWidth="150dp"
         android:text="@string/close"
         android:textColor="#000000"
         android:textSize="30dp"
