--- a/Field Book/res/layout/config.xml
+++ b/Field Book/res/layout/config.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout 
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="#FFFFFF"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <View
         android:layout_width="fill_parent"
@@ -12,7 +11,7 @@
         android:background="#000000" />
 
     <ListView
-        android:id="@+id/myList"    
+        android:id="@+id/myList"
         android:choiceMode="singleChoice"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -23,18 +22,19 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:paddingTop="10dp"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/closeBtn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:layout_gravity="center_horizontal"
+            android:background="@android:drawable/btn_default"
             android:minWidth="150dp"
             android:text="@string/close"
             android:textColor="#000000"
             android:textSize="30dp"
             android:textStyle="bold" />
     </LinearLayout>
-    
+
 </LinearLayout>
