--- a/Field Book/res/layout/genericdialog.xml
+++ b/Field Book/res/layout/genericdialog.xml
@@ -3,29 +3,32 @@
     android:layout_width="fill_parent"
     android:layout_height="500dp"
     android:background="#FFFFFF"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <View
         android:layout_width="fill_parent"
         android:layout_height="1dp"
         android:background="#000000" />
+
     <ListView
         android:id="@+id/myList"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1" />
+
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:paddingTop="10dp"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/closeBtn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:layout_gravity="center_horizontal"
+            android:background="@android:drawable/btn_default"
             android:minWidth="150dp"
             android:text="@string/close"
             android:textColor="#000000"
@@ -33,5 +36,5 @@
             android:textStyle="bold" />
     </LinearLayout>
 
-    
+
 </LinearLayout>
