--- a/Field Book/res/layout/location.xml
+++ b/Field Book/res/layout/location.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:background="#FFFFFF"
     android:orientation="vertical"
-    android:padding="5dp" >
+    android:padding="5dp">
 
     <TextView
         android:id="@+id/currentLocation"
@@ -23,8 +23,7 @@
         android:layout_marginLeft="10dip"
         android:layout_marginRight="5dip"
         android:text="@string/latitude"
-        android:textSize="20dip" >
-    </TextView>
+        android:textSize="20dip"></TextView>
 
     <TextView
         android:id="@+id/longitude"
@@ -33,22 +32,22 @@
         android:layout_marginLeft="10dip"
         android:layout_marginRight="5dip"
         android:text="@string/longitude"
-        android:textSize="20dip" >
-    </TextView>
+        android:textSize="20dip"></TextView>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:orientation="horizontal"
-        android:weightSum="100" >
+        android:weightSum="100">
 
         <Button
             android:id="@+id/getLctnBtn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:layout_marginRight="5dp"
             android:layout_weight="80"
+            android:background="@android:drawable/btn_default"
             android:minWidth="180dp"
             android:text="@string/getlocation"
             android:textColor="#000000"
@@ -58,9 +57,10 @@
         <Button
             android:id="@+id/saveBtn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:layout_marginLeft="5dp"
             android:layout_weight="80"
+            android:background="@android:drawable/btn_default"
             android:minWidth="100dp"
             android:text="@string/okay"
             android:textColor="#000000"
