--- a/Field Book/res/layout/main.xml
+++ b/Field Book/res/layout/main.xml
@@ -374,7 +374,7 @@
             android:paddingRight="30px"
             android:paddingTop="10px"
             android:progressDrawable="@drawable/custom_seek_bar"
-            android:thumb="@drawable/seek_bar_thumb"
+            android:thumb="@drawable/custom_seek_bar_thumb"
             android:thumbOffset="0dp"
             android:visibility="gone" />
 
