--- a/Field Book/res/layout/parameter.xml
+++ b/Field Book/res/layout/parameter.xml
@@ -15,7 +15,7 @@
         android:paddingTop="5dp">
 
         <TextView
-            android:layout_width="150dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:paddingRight="10dp"
@@ -29,6 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#000000"
+            android:minWidth="300dp"
             android:textSize="20dp"
             android:textStyle="bold" />
 
@@ -43,7 +44,7 @@
         android:paddingTop="5dp">
 
         <TextView
-            android:layout_width="150dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:paddingRight="10dp"
@@ -58,6 +59,7 @@
             android:layout_height="wrap_content"
             android:textColor="#000000"
             android:textSize="20dp"
+            android:minWidth="300dp"
             android:textStyle="bold" />
 
     </LinearLayout>
@@ -72,9 +74,10 @@
         <Button
             android:id="@+id/saveBtn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:layout_gravity="center_horizontal"
-            android:minWidth="100dp"
+            android:minWidth="150dp"
+            android:background="@android:drawable/btn_default"
             android:text="@string/okay"
             android:textColor="#000000"
             android:textSize="30dp"
@@ -87,9 +90,10 @@
         <Button
             android:id="@+id/clearBtn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:layout_gravity="center_horizontal"
-            android:minWidth="100dp"
+            android:background="@android:drawable/btn_default"
+            android:minWidth="150dp"
             android:text="@string/clear"
             android:textColor="#000000"
             android:textSize="30dp"
