--- a/Field Book/res/layout/person.xml
+++ b/Field Book/res/layout/person.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:background="#FFFFFF"
     android:orientation="vertical"
-    android:padding="20dp" >
+    android:padding="20dp">
 
     <TextView
         android:id="@+id/currentPerson"
@@ -63,13 +63,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/saveBtn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:layout_gravity="center_horizontal"
+
+            android:background="@android:drawable/btn_default"
             android:minWidth="150dp"
             android:text="@string/okay"
             android:textColor="#000000"
