--- a/Field Book/res/layout/savedb.xml
+++ b/Field Book/res/layout/savedb.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:background="#FFFFFF"
     android:orientation="vertical"
-    android:padding="5dp" >
+    android:padding="5dp">
 
     <TextView
         android:layout_width="wrap_content"
@@ -36,30 +36,33 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:paddingTop="10dp"
-        android:orientation="horizontal" >
-    
-	    <Button
-	        android:id="@+id/saveBtn"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_gravity="center"
-	        android:minWidth="100dp"
-	        android:text="@string/okay"
-	        android:textColor="#000000"
-	        android:textSize="30dp"
-	        android:textStyle="bold" />
+        android:orientation="horizontal">
 
-	    <Button
-	        android:id="@+id/closeBtn"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_gravity="center"
-	        android:minWidth="100dp"
-	        android:text="@string/close"
-	        android:textColor="#000000"
-	        android:textSize="30dp"
-	        android:textStyle="bold" />
-	    	    
-	</LinearLayout>
-	
+        <Button
+            android:id="@+id/saveBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+
+            android:background="@android:drawable/btn_default"
+            android:minWidth="150dp"
+            android:text="@string/okay"
+            android:textColor="#000000"
+            android:textSize="30dp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/closeBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:background="@android:drawable/btn_default"
+            android:layout_gravity="center"
+            android:minWidth="150dp"
+            android:text="@string/close"
+            android:textColor="#000000"
+            android:textSize="30dp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
 </LinearLayout>
