--- a/Field Book/res/layout/savefile.xml
+++ b/Field Book/res/layout/savefile.xml
@@ -4,86 +4,123 @@
     android:layout_height="wrap_content"
     android:background="#FFFFFF"
     android:orientation="vertical"
-    android:padding="5dp" >
+    android:padding="5dp">
 
-    <CheckBox 
-    	android:id="@+id/formatDB"    	
-    	android:text="@string/dbformat"  
-    	android:textAppearance="?android:attr/textAppearanceLarge"
-    	android:textColor="#000000"  
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-    />
-
-    <CheckBox 
-    	android:id="@+id/formatExcel"
-    	android:textAppearance="?android:attr/textAppearanceLarge"
-    	android:textColor="#000000"
-    	android:text="@string/tableformat"    
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-    />
-    
-    <ListView
-        android:id="@+id/myList"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1" />
-    
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@string/format"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/filename"
         android:textColor="@color/s_text"
         android:textStyle="bold" />
 
-    <EditText
-        android:id="@+id/fileName"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_width="450dp"
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="#FFFFFF" />
+
+    <CheckBox
+        android:id="@+id/formatDB"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:maxLength="200"
-        android:singleLine="true"
-        android:textColor="#000000"
-	/>
+        android:text="@string/dbformat"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#000000" />
+
+    <CheckBox
+        android:id="@+id/formatExcel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/tableformat"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#000000" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="#FFFFFF" />
 
     <TextView
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/allcolumns"
         android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/s_text"
+        android:textStyle="bold" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="#FFFFFF" />
+
+    <ListView
+        android:id="@+id/myList"
+        android:layout_width="fill_parent"
+        android:layout_height="350dp"
+        android:layout_weight="1" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="#FFFFFF" />
+
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/filename"
-        android:textStyle="bold"
-        android:visibility="invisible" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/s_text"
+        android:textStyle="bold" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="#FFFFFF" />
+
+    <EditText
+        android:id="@+id/fileName"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:maxLength="200"
+        android:singleLine="true"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#000000" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="#FFFFFF" />
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:paddingTop="10dp"
-        android:orientation="horizontal" >
-    
-		    <Button
-		        android:id="@+id/saveBtn"        
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:layout_gravity="center"
-		        android:minWidth="100dp"
-		        android:text="@string/okay"
-		        android:textColor="#000000"
-		        android:textSize="30dp"
-		        android:textStyle="bold" />
+        android:orientation="horizontal"
+        android:paddingTop="10dp">
 
-		    <Button
-		        android:id="@+id/closeBtn"        
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:layout_gravity="center"
-		        android:minWidth="100dp"
-		        android:text="@string/close"
-		        android:textColor="#000000"
-		        android:textSize="30dp"
-		        android:textStyle="bold" />
-		    
-	   </LinearLayout>		    
+        <Button
+            android:id="@+id/saveBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:background="@android:drawable/btn_default"
+            android:minWidth="150dp"
+            android:text="@string/okay"
+            android:textColor="#000000"
+            android:textSize="30dp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/closeBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:background="@android:drawable/btn_default"
+            android:minWidth="150dp"
+            android:text="@string/close"
+            android:textColor="#000000"
+            android:textSize="30dp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
 </LinearLayout>
