--- a/Field Book/res/layout/summary.xml
+++ b/Field Book/res/layout/summary.xml
@@ -1,39 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout 
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:background="#FFFFFF"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/text1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="20dp"        
+        android:paddingLeft="20dp"
         android:paddingRight="20dp"
         android:text=""
         android:textColor="#000000"
         android:textSize="20dp"
         android:textStyle="bold" />
-    
+
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:paddingTop="10dp"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/closeBtn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:layout_gravity="center_horizontal"
+            android:background="@android:drawable/btn_default"
             android:minWidth="150dp"
             android:text="@string/close"
             android:textColor="#000000"
             android:textSize="30dp"
             android:textStyle="bold" />
     </LinearLayout>
-    
+
 </LinearLayout>
