--- a/Field Book/res/layout/traitline.xml
+++ b/Field Book/res/layout/traitline.xml
@@ -50,7 +50,7 @@
 
     <Button
         android:id="@+id/copyBtn"
-        android:layout_width="wrap_content"
+        android:layout_width="45dp"
         android:layout_height="45dp"
         android:background="@android:drawable/btn_default"
         android:drawableTop="@drawable/ic_action_copy"
@@ -63,10 +63,23 @@
 
     <Button
         android:id="@+id/delBtn"
-        android:layout_width="wrap_content"
+        android:layout_width="45dp"
         android:layout_height="45dp"
         android:background="@android:drawable/btn_default"
         android:drawableTop="@drawable/ic_action_discard"
+        android:focusable="false"
+        android:minWidth="30dp"
+        android:text=""
+        android:textColor="#000000"
+        android:textSize="16dp"
+        android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/edtBtn"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:background="@android:drawable/btn_default"
+        android:drawableTop="@drawable/ic_action_edit"
         android:focusable="false"
         android:minWidth="30dp"
         android:text=""
