--- a/Field Book/res/layout/location.xml
+++ b/Field Book/res/layout/location.xml
@@ -4,35 +4,42 @@
     android:layout_height="wrap_content"
     android:background="#FFFFFF"
     android:orientation="vertical"
-    android:padding="5dp">
+    android:padding="20dp">
 
-    <TextView
-        android:id="@+id/currentLocation"
-        android:layout_width="fill_parent"
+    <EditText
+        android:id="@+id/latitude"
+        android:layout_width="500dp"
         android:layout_height="wrap_content"
-        android:paddingBottom="10dp"
-        android:paddingLeft="10dp"
-        android:text=""
-        android:textSize="20dp"
+        android:hint="@string/longitude"
+        android:maxLength="200"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:singleLine="true"
+        android:textColor="@color/s_text"
+        android:textSize="30dp"
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/latitude"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dip"
-        android:layout_marginRight="5dip"
-        android:text="@string/latitude"
-        android:textSize="20dip"></TextView>
+        android:layout_width="20dp"
+        android:layout_height="30dp"
+        android:text=""
+        android:textColor="@color/s_text"
+        android:textSize="48dp"
+        android:textStyle="bold"
+        android:visibility="invisible" />
 
-    <TextView
+    <EditText
         android:id="@+id/longitude"
-        android:layout_width="fill_parent"
+        android:layout_width="500dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dip"
-        android:layout_marginRight="5dip"
-        android:text="@string/longitude"
-        android:textSize="20dip"></TextView>
+        android:hint="@string/latitude"
+        android:maxLength="200"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:singleLine="true"
+        android:textColor="@color/s_text"
+        android:textSize="30dp"
+        android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="wrap_content"
