--- a/Field Book/res/layout/trait_audio.xml
+++ b/Field Book/res/layout/trait_audio.xml
@@ -3,46 +3,33 @@
     android:id="@+id/audioLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:visibility="gone"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:visibility="gone">
 
-    <LinearLayout
-        android:id="@+id/audio"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:orientation="horizontal"
-        android:paddingTop="20dp">
+    <Button
+        android:id="@+id/record"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:layout_gravity="center"
+        android:background="@android:drawable/btn_default"
+        android:gravity="center"
+        android:minWidth="150dp"
+        android:text="@string/record"
+        android:textColor="#000000"
+        android:textSize="30dp"
+        android:textStyle="bold" />
 
-        <Button
-            android:id="@+id/record"
-            android:layout_width="wrap_content"
-            android:layout_height="60dp"
-            android:layout_gravity="center"
-            android:background="@android:drawable/btn_default"
-            android:gravity="center"
-            android:minWidth="150dp"
-            android:text="@string/record"
-            android:textColor="#000000"
-            android:textSize="30dp"
-            android:textStyle="bold" />
+    <Button
+        android:id="@+id/clearRecord"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:layout_gravity="center"
+        android:background="@android:drawable/btn_default"
+        android:gravity="center"
+        android:minWidth="150dp"
+        android:text="@string/clear"
+        android:textColor="#000000"
+        android:textSize="30dp"
+        android:textStyle="bold" />
 
-        <View
-            android:layout_width="20dp"
-            android:layout_height="match_parent" />
-
-        <Button
-            android:id="@+id/clearRecord"
-            android:layout_width="wrap_content"
-            android:layout_height="60dp"
-            android:layout_gravity="center"
-            android:background="@android:drawable/btn_default"
-            android:gravity="center"
-            android:minWidth="150dp"
-            android:text="@string/clear"
-            android:textColor="#000000"
-            android:textSize="30dp"
-            android:textStyle="bold" />
-
-    </LinearLayout>
 </LinearLayout>
