--- a/Field Book/res/layout/importchoose.xml
+++ b/Field Book/res/layout/importchoose.xml
@@ -13,7 +13,11 @@
             android:id="@+id/main"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"></LinearLayout>
+            android:orientation="vertical">
+
+
+
+            </LinearLayout>
 
         <LinearLayout
             android:layout_width="fill_parent"
