--- a/Field Book/res/layout/about.xml
+++ b/Field Book/res/layout/about.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:paddingBottom="10dp"
         android:paddingLeft="10dp"
-        android:text="Version: "
+        android:text="@string/versiontitle"
         android:textColor="#38c0f4"
         android:textSize="25dp"
         android:clickable="true"
@@ -37,7 +37,7 @@
         android:layout_marginLeft="15dip"
         android:paddingBottom="10dp"
         android:paddingLeft="10dp"
-        android:text="Trevor Rife, Kansas State University"
+        android:text="@string/devr"
         android:textColor="#000000"
         android:textSize="20dp"
         android:textStyle="bold" />
@@ -50,7 +50,7 @@
         android:autoLink="email"
         android:paddingBottom="5dp"
         android:paddingLeft="10dp"
-        android:text="trife@ksu.edu"
+        android:text="@string/devremail"
         android:textColor="#000000"
         android:textSize="15dp"
         android:textStyle="bold" />
@@ -63,7 +63,7 @@
         android:autoLink="web"
         android:paddingBottom="10dp"
         android:paddingLeft="10dp"
-        android:text="https://github.com/trife/Field-Book"
+        android:text="@string/devrsite"
         android:textColor="#000000"
         android:textSize="15dp"
         android:textStyle="bold" />
@@ -75,7 +75,7 @@
         android:layout_marginLeft="15dip"
         android:paddingBottom="10dp"
         android:paddingLeft="10dp"
-        android:text="Jesse Poland, Kansas State University"
+        android:text="@string/devp"
         android:textColor="#000000"
         android:textSize="20dp"
         android:textStyle="bold" />
@@ -88,7 +88,7 @@
         android:autoLink="email"
         android:paddingBottom="5dp"
         android:paddingLeft="10dp"
-        android:text="jpoland@ksu.edu"
+        android:text="@string/devpemail"
         android:textColor="#000000"
         android:textSize="15dp"
         android:textStyle="bold" />
@@ -101,44 +101,7 @@
         android:autoLink="web"
         android:paddingBottom="10dp"
         android:paddingLeft="10dp"
-        android:text="http://wheatgenetics.org"
-        android:textColor="#000000"
-        android:textSize="15dp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/developerTp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="15dip"
-        android:paddingBottom="5dp"
-        android:paddingLeft="10dp"
-        android:text="Technology Projects"
-        android:textColor="#000000"
-        android:textSize="20dp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/developerTpMsg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="25dip"
-        android:paddingBottom="5dp"
-        android:paddingLeft="10dp"
-        android:text="Solutions for mobile clients, server, and cloud-based computing."
-        android:textColor="#000000"
-        android:textSize="15dp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/developerTpEmail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="25dip"
-        android:autoLink="email"
-        android:paddingBottom="10dp"
-        android:paddingLeft="10dp"
-        android:text="technologyprojects@gmail.com"
+        android:text="@string/devpsite"
         android:textColor="#000000"
         android:textSize="15dp"
         android:textStyle="bold" />
@@ -161,7 +124,7 @@
         android:layout_marginLeft="15dip"
         android:paddingBottom="10dp"
         android:paddingLeft="10dp"
-        android:text="Irazema Fuentes-Bueno,  Sandra Dunckel,  Shuangye Wu,  Narinder Singh,  Daljit Singh,  Erena Edae,  Tatiana Danilova,  Rodrigo Pedrozo,  Cristiano Lemes da Silva,  Sophie Bouchet,  Hiroyoshi Iwata,  Goro Ishikawa,  Khaled El-Shamaa"
+        android:text="@string/translist"
         android:textColor="#000000"
         android:textSize="20dp"
         android:textStyle="bold" />
